samples/_failures_safe/1761097196_700c13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_382679e2.c: In function ‘main’:
./samples/SAFE/__tmp_382679e2.c:132:29: error: expected ‘;’ at end of input
  132 |     for (int i = 0; i < rows
      |                             ^
      |                             ;
./samples/SAFE/__tmp_382679e2.c:132:5: error: expected declaration or statement at end of input
  132 |     for (int i = 0; i < rows
      |     ^~~
